--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ mail.username=dblitest@gmail.com
 mail.password=smtptest
 
 
+forrena.base.url=http://localhost:8000
+
 #Paypal
 paypal.host=api-3t.sandbox.paypal.com
 paypal.url=https://api-3t.sandbox.paypal.com/nvp
@@ -32,6 +34,6 @@ paypal.user=york.tips-facilitator_api1.gmail.com
 paypal.pwd=L7KDD899XGJJAGU5
 paypal.signature=A5Z-BjK07zqPlx4Dr-.DzaEoPvQvA6XUTwdcE-J8E9c4JwdaLSAZkeF8
 paypal.version=98.0
+
 paypal.returnurl=http://www.futrena.com
 paypal.cancelurl=http://www.futrena.com
-
